--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello txotx!</string>
-    <string name="app_name">txotx</string>
+    <string name="app_name">Txootx!</string>
 </resources>
