--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Txootx!</string>
+    <string name="ireki">Ireki</string>
+    <string name="itxi">Itxi</string>
 </resources>
